--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "web-mongo-cloudinary",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "mongodb": "^5.7.0",
+    "mongoose": "^7.6.0",
     "dotenv": "^16.3.1"
   }
 }
