--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "web-mongo-cloudinary",
   "version": "1.0.0",
   "type": "module",
-  "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.6.0",
-    "dotenv": "^16.3.1"
+    "express": "^4.19.0",
+    "mongoose": "^8.0.0",
+    "dotenv": "^16.4.0",
+    "cors": "^2.8.5"
   }
 }
