--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "web-mongo-cloudinary",
   "version": "1.0.0",
+  "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.19.0",
-    "mongoose": "^8.0.0",
-    "dotenv": "^16.4.0",
+    "express": "^4.18.2",
+    "mongoose": "^7.6.0",
+    "dotenv": "^16.3.1",
     "cors": "^2.8.5"
   }
 }
