--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb+srv://16540perezlidia_db_user:wWwLM0TDs6VdhqeC@nube-lidia.kopr5xl.mongodb.net/BD-Nube-Lidia
+MONGODB_URI=mongodb+srv://16540perezlidia_db_user:wWwLM0TDs6VdhqeC@nube-lidia.kopr5xl.mongodb.net/
 PORT=3000
